--- a/Liu.Y 2023 scRNA-seq analysis v2.Rmd
+++ b/Liu.Y 2023 scRNA-seq analysis v2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Liu.Y 2022 scRNA-seq analysis"
+title: "Liu.Y 2023 scRNA-seq analysis"
 output: html_notebook
 ---
 
@@ -713,6 +713,30 @@ Subcluster_refined_assigned_allcombined_sctV1Norm_Clu <- subset (x=Cluster_refin
 Subcluster_refined_assigned_allcombined_sctV1Norm_CluScale <- ScaleData(Subcluster_refined_assigned_allcombined_sctV1Norm_Clu, assay = "RNA", vars.to.regress = c("nCount_RNA", "percent.mt"))
 
 saveRDS(Subcluster_refined_assigned_allcombined_sctV1Norm_CluScale, "~/scRNAseq/ISC_scRNAseq_data_and_analysis/ISC share/Rstudio/Data/All combined/Seurat object/Subcluster_refined_assigned_allcombined_sctV1Norm_CluScale.rds")
+
+## create subset for Tuft cells
+Subcluster_refined_assigned_allcombined_sctV1Norm_Tuft <- subset (x= Cluster_refined_assigned_allcombined_sctV1Norm, idents = ("Tuft"))
+
+# Scale data for Tuft cells
+Subcluster_refined_assigned_allcombined_sctV1Norm_TuftScale <- ScaleData(Subcluster_refined_assigned_allcombined_sctV1Norm_Tuft, assay = "RNA", vars.to.regress = c("nCount_RNA", "percent.mt"))
+
+saveRDS(Subcluster_refined_assigned_allcombined_sctV1Norm_TuftScale, "/Volumes/Yi ExPro/ISC scRNAseq data and analysis/ISC share/Rstudio/Data/All combined/Seurat object/Subcluster_refined_assigned_allcombined_sctV1Norm_TuftScale.rds")
+
+## create subset for EEC cells
+Subcluster_refined_assigned_allcombined_sctV1Norm_EEC <- subset (x= Cluster_refined_assigned_allcombined_sctV1Norm, idents = ("EEC"))
+
+# Scale data for EEC cells
+Subcluster_refined_assigned_allcombined_sctV1Norm_EECScale <- ScaleData(Subcluster_refined_assigned_allcombined_sctV1Norm_EEC, assay = "RNA", vars.to.regress = c("nCount_RNA", "percent.mt"))
+
+saveRDS(Subcluster_refined_assigned_allcombined_sctV1Norm_EECScale, "/Volumes/Yi ExPro/ISC scRNAseq data and analysis/ISC share/Rstudio/Data/All combined/Seurat object/Subcluster_refined_assigned_allcombined_sctV1Norm_EECScale.rds")
+
+## create subset for EEC precursor cells
+Subcluster_refined_assigned_allcombined_sctV1Norm_EECp <- subset (x= Cluster_refined_assigned_allcombined_sctV1Norm, idents = ("EEC precursor"))
+
+# Scale data for EEC precursor cells
+Subcluster_refined_assigned_allcombined_sctV1Norm_EECpScale <- ScaleData(Subcluster_refined_assigned_allcombined_sctV1Norm_EECp, assay = "RNA", vars.to.regress = c("nCount_RNA", "percent.mt"))
+
+saveRDS(Subcluster_refined_assigned_allcombined_sctV1Norm_EECpScale, "/Volumes/Yi ExPro/ISC scRNAseq data and analysis/ISC share/Rstudio/Data/All combined/Seurat object/Subcluster_refined_assigned_allcombined_sctV1Norm_EECpScale.rds")
 ```
 
 ```{r tabulates}
@@ -821,7 +845,7 @@ pspsubq2 <- FeaturePlot(object = Subcluster_refined_assigned_allcombined_sctV1No
 pspsubq2
 ggsave(filename = "~/scRNAseq/ISC_scRNAseq_data_and_analysis/ISC share/Rstudio/IntestinalOrganoids/Results/Subcluster_refined_assigned_allcombined_sctV1Norm_GobPan_revised_feature_Panmarker.jpg", height = 25, width = 12, plot = pspsubq2, quality = 50)
 
-#for comparison to demonstrate seperating Paneth and Goblet cells are not satisfied
+#for comparison to demonstrate that seperating Paneth and Goblet cells is not satisfied
 pspsuww <- FeaturePlot(object = Subcluster_refined_assigned_allcombined_sctV1Norm_GobPan_revised, features = c("Muc2", "Tff3"), ncol = 2)
 ggsave(filename = "/Volumes/Yi ExPro/ISC scRNAseq data and analysis/ISC share/Rstudio/IntestinalOrganoids/Results/allcombined UMAPD45R0.8n4000/Figure revision/Subcluster_refined_assigned_allcombined_sctV1Norm_GobPan_revised_feature_Gobmarker.jpg", height = 5, width = 12, plot = pspsuww, quality = 50)
 
@@ -829,143 +853,8 @@ pspsuwu <- FeaturePlot(object = Subcluster_refined_assigned_allcombined_sctV1Nor
 ggsave(filename = "/Volumes/Yi ExPro/ISC scRNAseq data and analysis/ISC share/Rstudio/IntestinalOrganoids/Results/allcombined UMAPD45R0.8n4000/Figure revision/Subcluster_refined_assigned_allcombined_sctV1Norm_GobPan_revised_feature_Panmarker.jpg", height = 5, width = 12, plot = pspsuwu, quality = 50)
 ```
 
-Session Info
-R version 4.1.3 (2022-03-10)
-Platform: x86_64-apple-darwin17.0 (64-bit)
-Running under: macOS Monterey 12.4
-Matrix products: default
-LAPACK: /Library/Frameworks/R.framework/Versions/4.1/Resources/lib/libRlapack.dylib
-locale:
-[1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
-attached base packages:
-[1] stats     graphics
-[3] grDevices utils
-[5] datasets  methods
-[7] base
-other attached packages:
-[1] DECENT_1.1.1
-[2] readr_2.1.3
-[3] ggplot2_3.4.0
-[4] dplyr_1.0.10
-[5] patchwork_1.1.2
-[6] SeuratObject_4.1.3
-[7] Seurat_4.3.0
-loaded via a namespace (and not attached):
-  [1] VGAM_1.1-7
-  [2] Rtsne_0.16
-  [3] colorspace_2.0-3
-  [4] deldir_1.0-6
-  [5] ellipsis_0.3.2
-  [6] ggridges_0.5.4
-  [7] rstudioapi_0.14
-  [8] spatstat.data_3.0-0
-  [9] leiden_0.4.3
- [10] listenv_0.9.0
- [11] ggrepel_0.9.2
- [12] fansi_1.0.3
- [13] codetools_0.2-18
- [14] splines_4.1.3
- [15] doParallel_1.0.17
- [16] knitr_1.41
- [17] polyclip_1.10-4
- [18] jsonlite_1.8.4
- [19] ica_1.0-3
- [20] cluster_2.1.4
- [21] png_0.1-8
- [22] uwot_0.1.14
- [23] shiny_1.7.4
- [24] sctransform_0.3.5
- [25] spatstat.sparse_3.0-0
- [26] compiler_4.1.3
- [27] httr_1.4.4
- [28] assertthat_0.2.1
- [29] Matrix_1.5-1
- [30] fastmap_1.1.0
- [31] lazyeval_0.2.2
- [32] limma_3.50.3
- [33] cli_3.6.0
- [34] later_1.3.0
- [35] htmltools_0.5.4
- [36] tools_4.1.3
- [37] igraph_1.3.5
- [38] gtable_0.3.1
- [39] glue_1.6.2
- [40] RANN_2.6.1
- [41] reshape2_1.4.4
- [42] Rcpp_1.0.9
- [43] ZIM_1.1.0
- [44] scattermore_0.8
- [45] vctrs_0.5.1
- [46] spatstat.explore_3.0-5
- [47] nlme_3.1-161
- [48] progressr_0.13.0
- [49] iterators_1.0.14
- [50] lmtest_0.9-40
- [51] spatstat.random_3.0-1
- [52] xfun_0.36
- [53] stringr_1.5.0
- [54] globals_0.16.2
- [55] mime_0.12
- [56] miniUI_0.1.1.1
- [57] lifecycle_1.0.3
- [58] irlba_2.3.5.1
- [59] statmod_1.5.0
- [60] goftest_1.2-3
- [61] future_1.30.0
- [62] edgeR_3.36.0
- [63] MASS_7.3-58.1
- [64] zoo_1.8-11
- [65] scales_1.2.1
- [66] hms_1.1.2
- [67] promises_1.2.0.1
- [68] spatstat.utils_3.0-1
- [69] parallel_4.1.3
- [70] RColorBrewer_1.1-3
- [71] yaml_2.3.6
- [72] reticulate_1.27
- [73] pbapply_1.7-0
- [74] gridExtra_2.3
- [75] stringi_1.7.12
- [76] foreach_1.5.2
- [77] rlang_1.0.6
- [78] pkgconfig_2.0.3
- [79] matrixStats_0.63.0
- [80] evaluate_0.19
- [81] lattice_0.20-45
- [82] ROCR_1.0-11
- [83] purrr_0.3.4
- [84] tensor_1.5
- [85] htmlwidgets_1.6.1
- [86] cowplot_1.1.1
- [87] tidyselect_1.2.0
- [88] parallelly_1.34.0
- [89] RcppAnnoy_0.0.20
- [90] plyr_1.8.8
- [91] magrittr_2.0.3
- [92] R6_2.5.1
- [93] generics_0.1.3
- [94] DBI_1.1.3
- [95] pillar_1.8.1
- [96] withr_2.5.0
- [97] fitdistrplus_1.1-8
- [98] survival_3.5-0
- [99] abind_1.4-5
-[100] sp_1.5-1
-[101] tibble_3.1.8
-[102] future.apply_1.10.0
-[103] KernSmooth_2.23-20
-[104] utf8_1.2.2
-[105] spatstat.geom_3.0-3
-[106] plotly_4.10.1
-[107] tzdb_0.3.0
-[108] rmarkdown_2.19
-[109] locfit_1.5-9.7
-[110] grid_4.1.3
-[111] data.table_1.14.6
-[112] digest_0.6.31
-[113] xtable_1.8-4
-[114] tidyr_1.2.1
-[115] httpuv_1.6.8
-[116] stats4_4.1.3
-[117] munsell_0.5.0
-[118] viridisLite_0.4.1
+Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
+
+When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Cmd+Shift+K* to preview the HTML file). 
+
+The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
